[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supervisor-sdk"
version = "0.1.0"
description = "Official Python SDK for the Supervisor content moderation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phosphor Technologies" },
]
keywords = ["moderation", "content-moderation", "ai", "safety", "supervisor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://supervisor.gg"
Documentation = "https://supervisor.gg/docs/api"
Repository = "https://github.com/phosphor-tech/supervisor-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/supervisor"]
